# ToolCase

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  SKILL.md  __init__.py  _detail_long.py  _list_long.py  _protect.py  _verify.py  _verify2.py  agent_memory.py  api_contract_checker.py  apk_reverse.py  backup_manager.py  build_doctor.py  button_action_scanner.py  changelog_generator.py  check_syntax.py  code_churn_analyzer.py  command_guard.py  complexity.py  config_validator.py  dashboard.html  dead_code_finder.py  dependency_audit.py  dependency_visualizer.py  depgraph.py  docs_sync.py  docs_sync_auto_fix.py  env_check.py  error_explainer.py  fake_ui_detector.py  feature_gap_analyzer.py  (+49 more)
.github/workflows/: ci.yml
.hermes/plans/: 2026-06-24_toolcase-v5.5-roadmap.md
.rsi_reports/: rsi_report_20260619_090928.json  rsi_report_20260619_091216.json
apk_reverse_suite/: README.md  analyze.py  requirements.txt  toolcase_integration.py
apk_reverse_suite/core/: compare.py  engine.py  patterns.py  report.py  scanner.py  utils.py
apk_reverse_suite/docs/: INTEGRATION.md
apk_reverse_suite/examples/: example_usage.py
apk_reverse_suite/tests/: test_suite.py
demo/: __init__.py  quickserve.py
scripts/: __init__.py  check_packaging.py  check_version_consistency.py  sync_readme_metrics.py
tests/: __init__.py  test_backup_containment.py  test_cli_exit_codes.py  test_command_guard.py  test_i18n.py  test_improve.py  test_new_tools.py  test_packaging.py  test_protect.py  test_safe_delete.py  test_safe_run.py  test_safe_run_quick.py  test_security.py  test_self_improve.py  test_todo_tracker.py
tests/fixtures/: test_complexity.php
toolcase_core/: __init__.py  utils.py
