[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "toolcase"
version = "5.2.0"
description = "AI Agent Code Toolkit — 53 tools for code analysis, security, and self-improvement"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "SmokerGreenOG"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]

[project.scripts]
toolcase = "improve:main"

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
python_files = "test_*.py"
