[build-system]
requires = ["setuptools>=68.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolcase"
version = "5.4.2"
description = "AI Agent Code Toolkit — 62 tools for code analysis, security, APK reverse engineering, and recursive self-improvement"
readme = "README.md"
license = "LicenseRef-ToolCase-1.0"
requires-python = ">=3.11"
authors = [{name = "SmokerGreenOG"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]

[project.scripts]
toolcase = "improve:main"
toolcase-security = "security_scan:main"
toolcase-safe-run = "safe_run:main"
toolcase-rsi = "recursive_self_improve:main"
toolcase-doctor = "project_doctor:main"
toolcase-release = "release_readiness:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pyyaml",
]
build = [
    "build",
    "twine",
]

[tool.setuptools]
include-package-data = true
# All top-level .py modules (flat structure — no src/ layout yet)
py-modules = [
    "__init__",
    "_protect",
    "agent_memory",
    "api_contract_checker",
    "apk_reverse",
    "backup_manager",
    "build_doctor",
    "button_action_scanner",
    "changelog_generator",
    "check_syntax",
    "code_churn_analyzer",
    "command_guard",
    "complexity",
    "config_validator",
    "dead_code_finder",
    "dependency_audit",
    "dependency_visualizer",
    "depgraph",
    "docs_sync",
    "docs_sync_auto_fix",
    "env_check",
    "error_explainer",
    "fake_ui_detector",
    "feature_gap_analyzer",
    "file_guard",
    "frontend_backend_linker",
    "git_workflow_checker",
    "i18n",
    "improve",
    "license_checker",
    "log_viewer",
    "multiscan",
    "patch_preview",
    "performance_profiler",
    "permission_audit",
    "php_checker",
    "php_complexity",
    "php_config_audit",
    "php_dead_code",
    "php_dep_audit",
    "php_depgraph",
    "php_test_runner",
    "php_version_audit",
    "project_doctor",
    "prompt_optimizer",
    "recursive_self_improve",
    "release_packager",
    "release_readiness",
    "rollback",
    "route_scanner",
    "rsi_apply_docs",
    "rsi_llm_bridge",
    "rsi_report_html",
    "safe_run",
    "safe_delete",
    "sarif_exporter",
    "scan_reliability",
    "security_scan",
    "self_improve_loop",
    "skill_installer",
    "state_inspector",
    "test_runner",
    "todo_tracker",
    "type_coverage",
    "ui_consistency",
    "workspace_indexer",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["demo", "demo.*", "docs", "docs.*", "scripts", "scripts.*", "toolcase_core", "toolcase_core.*"]

[tool.setuptools.data-files]
"share/toolcase" = [
    "README.md",
    "tools_config.json",
    "manifest.json",
    "SKILL.md",
    "dashboard.html",
    "rsi_dashboard.html",
    "icon.png",
    "icon.svg",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
python_files = "test_*.py"
